--- a/Fall2024-Assignment1-tbclements/wwwroot/css/site.css
+++ b/Fall2024-Assignment1-tbclements/wwwroot/css/site.css
@@ -19,4 +19,82 @@ html {
 
 body {
   margin-bottom: 60px;
+  position: relative;
+  top: 0px;
+  background-color: steelblue;
+  overflow-y: hidden;
+}
+
+.flexMid {
+  display: flex;
+  flex-direction: row;
+  flex:auto;
+  justify-content: center;
+  height: 100vh;
+}
+
+.centerDiv {
+  width: 80vw;
+  height: 80vh;
+  display: flex;
+  flex:auto;
+  flex-direction: column;
+  align-items: center;
+  background-color: white;
+  overflow-y: auto;
+  gap: 10px;
+}
+
+#Banner{
+  position: relative;
+  top:0;
+  left: 0;
+  width: 100%;
+  height: 20vh;
+  background-color: rgb(255, 255, 255);
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+}
+
+.navButton{
+  background-color: steelblue;
+  border-radius: 2vh;
+  align-self: center;
+  font-size: smaller;
+}
+
+#Title{
+  border: 5%;
+  color: black;
+  justify-self: center;
+}
+
+#CoverArt{
+  width: 40%;
+  align-self: center;
+  border-radius: 100vh;
+}
+
+#Trailer{
+  padding-top: 10vh;
+  width: 40%;
+  height: 40%;
+}
+
+#Summary{
+  padding-left: 5vw;
+  padding-right: 5vw;
+  text-align: center;
+}
+
+#Actors{
+  padding-left: 0;
+  text-align: center;
+}
+
+#Actors > li{
+  text-align: center;
 }
