Making buttons match

--- a/Fall2024-Assignment1-tbclements/wwwroot/css/site.css
+++ b/Fall2024-Assignment1-tbclements/wwwroot/css/site.css
@@ -62,7 +62,8 @@ body {
 
 .navButton{
   border-width: 0.5;
-  border-color: grey;
+  border-color: white;
+  color: white;
   background-color: rgb(88, 165, 227);
   width: 25%;
   border-radius: 100vh;
