--- a/Fall2024-Assignment1-tbclements/wwwroot/css/site.css
+++ b/Fall2024-Assignment1-tbclements/wwwroot/css/site.css
@@ -24,7 +24,7 @@ body {
   justify-content: stretch;
   display: flex;
   background-color: rgb(88, 165, 227);
-  overflow-y: hidden;
+  overflow-y: auto;
 }
 
 .flexMid {
@@ -37,18 +37,16 @@ body {
 
 .centerDiv {
   width: 80vw;
-  height: 80vh;
   display: flex;
   flex:auto;
   flex-direction: column;
   align-items: center;
   background-color:  rgb(15, 79, 132);
-  overflow-y: auto;
   gap: 10px;
 }
 
 #Banner{
-  position: relative;
+  position: sticky;
   top:0;
   left: 0;
   width: 100%;
@@ -84,16 +82,14 @@ body {
 
 @media all and (orientation: portrait) {
   #Trailer{
-    padding-top: 10vh;
     width: 80%;
-    height: 60%
+    height: 60vh;
   }
 }
 @media all and (orientation: landscape) {
   #Trailer{
-    padding-top: 10vh;
     width: 60%;
-    height: 80%
+    height: 80vh;
   }
 }
 
